--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == Work Manager Computing Project
-By Max Foster
+By Max Foster<br>
 max@supermaximo.com
 
 License: http://creativecommons.org/licenses/by-nc-sa/3.0/
@@ -9,3 +9,5 @@ This is the source code to my A2 level Computing coursework program ('Ian Foster
 There have been/will be more additions to the program than what was submitted to the examiner.
 
 Under no circumstances can this code, or parts of the code, be used commercially, and especially not in a school/university/etc. project! You are free to modify the code ONLY for personal use, and you must host the code on a public repository if you wish to distribute it to someone else.
+
+This readme MUST be included wherever this code is hosted.
